# cmd/api/helpers.go
@@ -1,0 +1,7 @@
+package main
+
+import "golang.org/x/crypto/bcrypt"
+
+func hashPassword(password string) ([]byte, error) {
+	return bcrypt.GenerateFromPassword([]byte(password), bcrypt.DefaultCost)
+}
