# docs/swagger.yaml
@@ -84,6 +84,22 @@ definitions:
     - content
     - title
     type: object
+  main.signupPayload:
+    properties:
+      email:
+        type: string
+      password:
+        maxLength: 20
+        minLength: 5
+        type: string
+      username:
+        maxLength: 20
+        minLength: 3
+        type: string
+    required:
+    - email
+    - username
+    type: object
   main.updatePostPayload:
     properties:
       content:
@@ -194,6 +210,8 @@ definitions:
         type: string
       id:
         type: string
+      is_activated:
+        type: boolean
       username:
         type: string
     type: object
@@ -210,6 +228,67 @@ info:
   title: Social API
   version: "1.0"
 paths:
+  /auth/activate/{token}:
+    post:
+      consumes:
+      - application/json
+      description: Activate a user from their invite token
+      parameters:
+      - description: Activation token
+        in: path
+        name: token
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/main.ErrorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/main.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/main.ErrorResponse'
+      summary: Activate a user
+      tags:
+      - Auth
+  /auth/signup:
+    post:
+      consumes:
+      - application/json
+      description: Register a new user
+      parameters:
+      - description: Signup payload
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/main.signupPayload'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/main.DataResponseUser'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/main.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/main.ErrorResponse'
+      summary: Register a user
+      tags:
+      - Auth
   /health:
     get:
       description: Returns service health information
